# JSWidget

./: .gitignore  JSWidget_demo.ipynb  LICENSE  README.md  jswidget.py  pyproject.toml
src/jswidget/: __init__.py  jswidget.py
