[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jswidget"
version = "0.1.0"
description = "A lightweight anywidget-based IPython widget that renders arbitrary JavaScript inside Jupyter notebooks"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [
    {name = "DannyRuijters"},
]
keywords = ["jupyter", "widget", "javascript", "anywidget", "ipython"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: JavaScript",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "anywidget",
    "numpy",
    "traitlets",
]

[project.urls]
Homepage = "https://github.com/DannyRuijters/JSWidget"
Repository = "https://github.com/DannyRuijters/JSWidget"

[tool.hatch.build.targets.wheel]
packages = ["src/jswidget"]

[tool.hatch.build.targets.sdist]
include = [
    "src/jswidget/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
